Fix line breaks on mobile by shifting around padding

--- a/css/glowingbear.css
+++ b/css/glowingbear.css
@@ -466,15 +466,15 @@ h2 span, h2 small {
 
     #bufferlines td.prefix {
         display: inline;
-        padding-right: 0;
+        padding-right: 5px;
         border: 0;
         font-weight: bold;
         font-size: 15px;
     }
 
     #bufferlines td.message {
-        padding-left: 0;
         display: inline;
+        padding: 0px !important;
     }
 
     /* a different colour is too irregular on mobile */
